# Channels

./: .gitignore  CMakeLists.txt  Channel.cbp  Channel.depend  Channel.layout  main.cpp
CSTAX/: CSTAX.cbp  CSTAX.depend  CSTAX.layout  main.cpp  test.xml  xmlsource.cpp  xmlsource.hpp
Demo/: Demo.cbp  Demo.depend  Demo.layout
TextDemo/: TextDemo.cbp  TextDemo.cscope_file_list  TextDemo.depend  TextDemo.layout  main.cpp  network.cpp  network.hpp  sample.txt
include/: WidowsNamedPipe.hpp  WindowsConsole.hpp  WindowsFile.hpp  WindowsPipe.hpp  abstractfile.hpp  asynchronous.hpp  buffers.hpp  bytebuffer.hpp  channels.hpp  channels_config.h  charbuffers.hpp  charset.hpp  charsets.hpp  compat.hpp  console.hpp  convert.hpp  cstax.hpp  datachannel.hpp  errors.hpp  file.hpp  ibm_icu_conv.hpp  iconv_conv.hpp  namedpipe.hpp  nb_forward_list.hpp  network.hpp  pipe.hpp  reader.hpp  readwrite.hpp  smallobject.hpp  smallobjectpool.hpp  spinlock.hpp  system.hpp  terminal.hpp  text.hpp  unixfile.hpp  win32_conv.hpp  windows_terminal.hpp  xmlparser.hpp
libgui/: libgui.cbp  libgui.depend  libgui.layout  main.cpp
src/: WidowsNamedPipe.cpp  WindowsConsole.cpp  WindowsFile.cpp  WindowsPipe.cpp  asynchronous.cpp  bytebuffer.cpp  channels.cpp  charsets.cpp  convert.cpp  cstax.cpp  datachannel.cpp  helpers.hpp  ibm_icu_conv.cpp  iconv_conv.cpp  main.cpp  mlang_i.c  mlang_i.cpp  msmlang_conv.cpp  namedpipe.cpp  network.cpp  pipe.cpp  prchdrs.cpp  prchdrs.h  smallobject.cpp  smallobjectpool.cpp  terminal.cpp  unix_file.cpp  unixfile.cpp  win32_conv.cpp  windows_file.cpp  windows_terminal.cpp
(+74 files in other folders)
